# naonn

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  travis.yml
exe/: CMakeLists.txt  CmakeLists.txt  demo.cpp  dummy.cpp
modules/: CMakeLists.txt
modules/AutomaticDifferentiation/: CMakeLists.txt
modules/AutomaticDifferentiation/include/AutomaticDifferentiation/: BaseExpression.hpp  BinaryExpressions.hpp  BinaryOperators.hpp  Expression.hpp  TypeHelper.hpp  UnaryExpressions.hpp  UnaryOperators.hpp  Variable.hpp
modules/NeuralNetwork/: CMakeLists.txt
modules/NeuralNetwork/include/NeuralNetwork/: layer.hpp  model.hpp
modules/NeuralNetwork/include/NeuralNetwork/detail/: model.cpp
modules/NeuralNetwork/src/NeuralNetwork/: dummy.cpp
tests/: CMakeLists.txt  auto_differentiation_test.cpp
